updated AspNetCore Version to 2.0.8

--- a/trunk/VSTDesk/src/app/core/login/login.component.html
+++ b/trunk/VSTDesk/src/app/core/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container container-account">
+<div class="container container-account container-account-login">
     <div class="row justify-content-center">
     
         <div class="col-lg-8 col-md-12">
@@ -19,7 +19,7 @@
                                 <a class="btn btn-link px-0" routerLink="/forgot-password">{{'CoreModule.Button.ForgotPassword' | translate}}</a>
                             </div>
                             <div class="row">
-                                <div class="col">
+                                <div class="col-sm-4">
                                     <button type="submit" class="btn btn-primary">{{'CoreModule.Button.Login' | translate}}</button>
                                 </div>
 
@@ -52,3 +52,4 @@
         
     </div>
 </div>
+<div class="container-account-login-footer"><p>{{'CoreModule.Label.LoginFooter' | translate}} <a href="{{'CoreModule.Label.GitHubLink' | translate}}" target="_blank">GitHub</a></p></div>
